# Rupture

./: .gitignore  .pre-commit-hooks.yaml  BENCHMARK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF-2026-06-08.md  HANDOFF.md  OPERATOR_DECISIONS.md  README.md  RULES.md  SECURITY.md  action.yml  pricing.yml  updateplan.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  blog-loop.yml  deploy-pages.yml  deploy-worker.yml  determinism.yml  ics.yml  mutation.yml  property.yml  publish-vscode.yml  release.yml  search-console.yml  seo-pages.yml  status-synth.yml  test.yml
apps/github-action/: README.md  action.yml  entrypoint.sh  run.sh
apps/github-app/: README.md  manifest.json  permissions.md
apps/grace-api/: Dockerfile
apps/pre-commit/: hooks.yaml
apps/runner/: Dockerfile  audit_pdf.py  main.py  migration_pr.py  requirements.txt
apps/vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
apps/web/: build.py
apps/worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
corpus/: catalog.md  public-repos.txt
docs/: deprecations.ics  index.html  llms.txt  robots.txt  sitemap.xml  style.css  widget.js
feed/: publish.py  verify.py
kits/al2023-gate/: .gitignore  README.md  pyproject.toml
kits/al2023-gate/docs/: DEMO.md  SETUP.md
kits/al2023-gate/docs/demos/: demo.cast
kits/al2023-gate/src/al2023_gate/: __init__.py  __main__.py  ansible.py  cli.py  cloudinit.py  packer.py  remap.py  runbook.py  scan.py  util.py
kits/al2023-gate/test/: conftest.py  test_ansible.py  test_cli.py  test_cloudinit.py  test_packer.py  test_remap.py  test_runbook.py  test_scan.py
kits/al2023-gate/test/fixtures/: inventory.json  playbook.yml  user-data.sh
kits/python-pivot/: .gitignore  LICENSE  README.md  pyproject.toml
kits/python-pivot/docs/: SETUP.md
kits/python-pivot/docs/demos/: demo.cast
kits/python-pivot/src/python_pivot/: __init__.py  __main__.py  audit.py  cli.py  codemod.py  deploy.py  iac.py  rollback.py  runtimes.py  scan.py  util.py
kits/python-pivot/test/: conftest.py  test_audit.py  test_cli.py  test_codemod.py  test_deploy.py  test_iac.py  test_scan.py
kits/python-pivot/test/fixtures/: lambda-inventory.json  main.tf  requirements.txt  sample_source.py  stack.ts  template.yaml
launch/: blog-post.md  hn-replies.md  launched.txt  outreach.md  readiness.md  show-hn-draft.md  show-hn-final.md  social.md  thread-answers.md
ledger/: mission_ledger.md
legal/: dpa.md  privacy.md  terms.md
research/: phase1_findings.md
(+104 files in other folders)
